--- a/package.json
+++ b/package.json
@@ -43,8 +43,11 @@
   "devDependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@types/react-redux": "^7.1.24",
+    "autoprefixer": "^10.4.13",
     "framer-motion": "^7.2.1",
+    "postcss": "^8.4.21",
     "react-redux": "^8.0.2",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.7.4"
   }
 }
