--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^9.0.1",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-responsive": "^9.0.0-beta.10",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.0",
     "react-scroll": "^1.8.7",
     "react-type-animation": "^2.1.0",
     "web-vitals": "^2.1.4"
@@ -44,7 +45,6 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@types/react-redux": "^7.1.24",
     "autoprefixer": "^10.4.13",
-    "framer-motion": "^7.2.1",
     "postcss": "^8.4.21",
     "react-redux": "^8.0.2",
     "tailwindcss": "^3.2.4",
