--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^9.0.1",
-    "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-responsive": "^9.0.0-beta.10",
-    "react-scripts": "^5.0.0",
     "react-scroll": "^1.8.7",
     "react-type-animation": "^2.1.0",
+    "vite-plugin-svgr": "^4.3.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -42,12 +43,17 @@
     ]
   },
   "devDependencies": {
-    "@reduxjs/toolkit": "^1.8.5",
-    "@types/react-redux": "^7.1.24",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
+    "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "^10.4.15",
+    "eslint": "^9.18.0",
+    "eslint-plugin-react": "^7.37.4",
     "postcss": "^8.4.28",
-    "react-redux": "^8.0.2",
     "tailwindcss": "^3.3.3",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vite": "^6.0.7"
   }
 }
