--- a/package.json
+++ b/package.json
@@ -45,14 +45,15 @@
   "devDependencies": {
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
+    "@types/react-scroll": "^1.8.10",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
     "@vitejs/plugin-react-swc": "^3.7.2",
-    "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.18.0",
     "eslint-plugin-react": "^7.37.4",
-    "postcss": "^8.4.28",
-    "tailwindcss": "^3.3.3",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^4.7.4",
     "vite": "^6.0.7"
   }
